Fix layout issues, in progress

--- a/main.css
+++ b/main.css
@@ -28,21 +28,23 @@ body {
 }
 
 .dropdown img {
+	
 	height: 90px;
 	width: auto;
-	top: 20px;
+	top: 8px;
 	position: top;
-	left: 75px;
+	right: 0px;
 	padding-top: 0px;
-	padding-right: 15px;
-	margin-left: 0px;
+
+
 	
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
-    left: 45px;
+    top: 10px;
+    left: 60px;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -73,9 +75,9 @@ body {
 
 .header-main p {
 	text-align: center;
-	height: 150px;
+	height: 100%;
 	background-color: #FFB8D6;
-	padding-bottom: 30px;
+	padding-bottom: 20px;
 
 }
 
